# autogen-experiments

./: Dockerfile  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: create_typescript_book.ipynb
src/output/: 01.TypeScriptの基礎.md  02.TypeScriptの型システム.md  03.インターフェースと型エイリアス.md  04.型推論とユーティリティ型.md  05.関数型プログラミングとTypeScript.md  06.ジェネリクスと高度な型.md  07.TypeScriptにおけるクラスとオブジェクト指向.md  08.TypeScriptとPythonの設計思想の違い.md  09.Pythonの型ヒントとTypeScriptの型の比較.md  10.TypeScriptでの非同期処理.md  11.型安全なAPI設計.md  12.TypeScriptでのCLIツール開発.md  13.フロントエンドとバックエンドの開発.md  14.型安全なデータ処理.md  15.TypeScriptの型システムの内部構造.md  16.TypeScriptの型チェックとコンパイラの仕組み.md  17.型安全な開発フロー.md  chapter_01_TypeScriptの基礎.md
src/output/old/: chapter_01_TypeScriptの基礎.md  chapter_02_TypeScriptの型システム.md  chapter_03_インターフェースと型エイリアス.md  chapter_04_型推論とユーティリティ型.md  chapter_05_関数型プログラミングとTypeScript.md  chapter_06_ジェネリクスと高度な型.md  chapter_07_TypeScriptにおけるクラスとオブジェクト指向.md  chapter_08_TypeScriptとPythonの設計思想の違い.md  chapter_09_Pythonの型ヒントとTypeScriptの型の比較.md  chapter_10_TypeScriptでの非同期処理.md  chapter_11_型安全なAPI設計.md  chapter_12_TypeScriptでのCLIツール開発.md  chapter_13_フロントエンドとバックエンドの開発.md  chapter_14_型安全なデータ処理.md  chapter_15_TypeScriptの型システムの内部構造.md  chapter_16_TypeScriptの型チェックとコンパイラの仕組み.md  chapter_17_型安全な開発フロー.md
